re PR middle-end/41123 (ICE in expand_expr_real_1)

PR middle-end/41123
	* expr.c (expand_expr_real_1) <normal_inner_ref>: Handle all kinds
	of CONCAT, not just bitpos 0 bitsize size of the whole CONCAT.

	* gcc.dg/pr41123.c: New test.

From-SVN: r150946